added basic structue in html and added javascript file

--- a/index.html
+++ b/index.html
@@ -15,23 +15,28 @@
   </style>
 </head>
 <body>
+<form class="age_form">
+  <label for="Date">Date</label>
+  <label for="Month">Month</label>
+  <label for="Year">Year</label><br> 
+  <input type="number" class="Date" placeholder="DD"> 
+  <input type="number" class="Month" placeholder="MM"> 
+  <input type="number" class="Year" placeholder="YYYY"> 
 
-  Day
-  DD
-
-  Month
-  MM
-
-  Year
-  YYYY
-
+  
+  
+</form>
+<img src="assets/images/icon-arrow.svg" alt="icon-arrow">
+<div class="result">
   -- years
   -- months
   -- days
+</div>
+<script src="main.js"></script>
   
-  <div class="attribution">
+  <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </div> -->
 </body>
 </html>
