--- a/index.html
+++ b/index.html
@@ -15,13 +15,17 @@
   </style>
 </head>
 <body>
+
+
 <form class="age_form">
-  <label for="Date">Date</label>
+  <!-- <label for="Date">Date</label>
   <label for="Month">Month</label>
-  <label for="Year">Year</label><br> 
-  <input type="number" class="Date" placeholder="DD"> 
+  <label for="Year">Year</label><br>  -->
+  <input type="number" id="Date" placeholder="DD"> 
   <input type="number" class="Month" placeholder="MM"> 
   <input type="number" class="Year" placeholder="YYYY"> 
+
+  <button type="submit" value="submit">Submit</button>
 
   
   
@@ -32,11 +36,11 @@
   -- months
   -- days
 </div>
-<script src="main.js"></script>
+<script type="javascript/text"  src="main.js"></script>
   
   <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div> -->
+   </div> -->
 </body>
 </html>
