added defer in link

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   -- months
   -- days
 </div>
-<script type="javascript/text"  src="main.js"></script>
+<script defer src="main.js"></script>
   
   <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
