added div for result and span for blanks

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
   
 </form>
 <img src="assets/images/icon-arrow.svg" alt="icon-arrow">
-<div class="result">
-  -- years
-  -- months
-  -- days
-</div>
+<<div class="result">
+    <div class="age_year"><span>--</span> years</div>
+    <div class="age_months"><span>--</span> months</div>
+    <div class="age_days"><span>--</span> days</div>
+  </div>
 <script defer src="main.js"></script>
   
   <!-- <div class="attribution">
