--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   
 </form>
 <img src="assets/images/icon-arrow.svg" alt="icon-arrow">
-<<div class="result">
+<div class="result">
     <div class="age_year"><span>--</span> years</div>
     <div class="age_months"><span>--</span> months</div>
     <div class="age_days"><span>--</span> days</div>
