--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- <label for="Date">Date</label>
   <label for="Month">Month</label>
   <label for="Year">Year</label><br>  -->
-  <input type="number" id="Date" placeholder="DD"> 
+  <input type="number" class="Date" placeholder="DD"> 
   <input type="number" class="Month" placeholder="MM"> 
   <input type="number" class="Year" placeholder="YYYY"> 
 
