--- a/index.html
+++ b/index.html
@@ -22,17 +22,22 @@
   <input type="number" class="Month" placeholder="MM"> 
   <input type="number" class="Year" placeholder="YYYY"> 
 
-  <button type="submit" value="submit">Submit</button>
+  
 
   
   
 </form>
-<img src="assets/images/icon-arrow.svg" alt="icon-arrow">
+<div class="arrow">
+  <div class="hline"></div>
+<button><img src="assets/images/icon-arrow.svg" alt="icon-arrow">
+</button>
+</div>
 <div class="result">
     <div class="age_year"><span>--</span> years</div>
     <div class="age_months"><span>--</span> months</div>
     <div class="age_days"><span>--</span> days</div>
   </div>
+  
 <script defer src="main.js"></script>
   
   <!-- <div class="attribution">
