--- a/index.html
+++ b/index.html
@@ -14,20 +14,29 @@
 <body>
 
 
-<form class="age_form">
-  <!-- <label for="Date">Date</label>
-  <label for="Month">Month</label>
-  <label for="Year">Year</label><br>  -->
+<form class="age_form  flex-group">
+  
+  
+    
+<div class="flex-group">
+  <label for="Date">Date</label>
   <input type="number" class="Date" placeholder="DD"> 
-  <input type="number" class="Month" placeholder="MM"> 
+  </div>
+  <div>
+  <label for="Month">Month</label>
+  <input type="number" class="Month" placeholder="MM">
+</div>
+<div>
+  <label for="Year">Year</label>
   <input type="number" class="Year" placeholder="YYYY"> 
+</div>
 
   
 
   
   
 </form>
-<div class="arrow">
+<div class="arrow flex-group">
   <div class="hline"></div>
 <button><img src="assets/images/icon-arrow.svg" alt="icon-arrow">
 </button>
