--- a/index.html
+++ b/index.html
@@ -12,41 +12,35 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-
-<form class="age_form  flex-group">
-  
-  
-    
-<div class="flex-group">
+  <div class="card">
+    <form>
+<div class="age_input flex-group">
+<div class="age_data">
   <label for="Date">Date</label>
   <input type="number" class="Date" placeholder="DD"> 
   </div>
-  <div>
+  <div class="age_data">
   <label for="Month">Month</label>
   <input type="number" class="Month" placeholder="MM">
 </div>
-<div>
+<div class="age_data">
   <label for="Year">Year</label>
   <input type="number" class="Year" placeholder="YYYY"> 
 </div>
-
-  
-
-  
-  
-</form>
-<div class="arrow flex-group">
+</div>
+  <div class="arrow flex-group">
   <div class="hline"></div>
 <button><img src="assets/images/icon-arrow.svg" alt="icon-arrow">
 </button>
 </div>
+</form>
 <div class="result">
     <div class="age_year"><span>--</span> years</div>
     <div class="age_months"><span>--</span> months</div>
     <div class="age_days"><span>--</span> days</div>
   </div>
-  
+</div>
+
 <script defer src="main.js"></script>
   
   <!-- <div class="attribution">
