--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,700;1,400;1,800&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="card">
@@ -28,16 +31,16 @@
   <input type="number" class="Year" placeholder="YYYY"> 
 </div>
 </div>
-  <div class="arrow flex-group">
+  <div class="arrow">
   <div class="hline"></div>
-<button><img src="assets/images/icon-arrow.svg" alt="icon-arrow">
+<button class="arrow_button"><img src="assets/images/icon-arrow.svg" alt="icon-arrow">
 </button>
 </div>
 </form>
 <div class="result">
-    <div class="age_year"><span>--</span> years</div>
-    <div class="age_months"><span>--</span> months</div>
-    <div class="age_days"><span>--</span> days</div>
+    <h1><div class="age_year"><span>--</span> years</div></h1>
+    <h1><div class="age_months"><span>--</span> months</div></h1>
+    <h1><div class="age_days"><span>--</span> days</div></h1>
   </div>
 </div>
 
