tried validation by using html inbuilt stuff

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 <div class="age_input flex-group">
 <div class="age_data">
   <label for="Date">Date</label>
-  <input type="number" class="Date" placeholder="DD"> 
+  <input type="number" class="Date" placeholder="DD" required min="1" max="31"> 
   </div>
   <div class="age_data">
   <label for="Month">Month</label>
-  <input type="number" class="Month" placeholder="MM">
+  <input type="number" class="Month" placeholder="MM" required min="1" max="12">
 </div>
 <div class="age_data">
   <label for="Year">Year</label>
